feature create user
e o nada de tirar o application.properties do commit. não saiu no gitignore vai com mesmo é um container docker tipo só roda quando eu subo o docker qualquer coisa muda as credenciais e ta safe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# Configuração do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/api_crud
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgresqldatabasesql
+spring.datasource.password=umasenhamaisnormal
 
+# Configuração do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuração da porta do servidor
+server.port=8090
+
+# Configuração do nome do aplicativo
+spring.application.name=meu-app
